# Friday

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
.direnv/: nix-profile-.4801.b7ee09cf5614  nix-profile-.4801.b7ee09cf5614.rc
.sqlx/: query-03ee8618ebf5dac56e5440a0d4bc61b68f5642c42ffc5ed63b7025e45d040a11.json  query-0967d2c77392d2d2a596cfd49c385d25e758b55aebe0377ec6da508746da8368.json  query-0f270e80390f96c002c82cd703ec03424c8b1597f98757d88be0e839a444cf63.json  query-10a2ae20be2b6d8f0715aa2243475d08193f08a755ea0dfe5317769b14539172.json  query-189f82039fc27772c86036628aa5e30f81532c4599a55ee924035d3cdb6aa57e.json  query-1f7817d242466db7f7e733bb5c5929d01bdba4c0887c8b2aff1001e26a71ca43.json  query-23d1c5b00ffe85b232facadc3389ddb36af302967dda2fc30c10de6d9278ec17.json  query-29687c10dd7d0bd9afbb07dc71ab1b519c4d9c987fe8531c925ca20f47f7c2ad.json  query-2a233d80e9e5ee31a1b6a2f8c3dc3c46cbab5375705b9b700f95d8aa78aa4714.json  query-2fd54ac80cf37445e8edd3fab6a0c413adbe4a7a8218cabe79489e30d55b199e.json  query-3988e9b76ceea2eaa35f7c8dc3a044b6f90ca33f8538ebe034806e56ae7d7a42.json  query-49ff95fce2124f4fe31f7e7a8e7fa9f713868e5db5c613791874d23b42179a79.json  query-564d6f1c43f64a26419dbed210e97d31269f7c65a334b19e48e2797810b7bd00.json  query-57f50ceb210dccda25e36e79450e3810c7b22973bc315a0b04ea09ae292386ac.json  query-5f0ee9351a7d3d21b3b8a3d4fc825d1e42923471155e31411e939dbf842638b8.json  query-624c0d7b212c07a3ae33d27651dc92c03fc72c0d4c7657ce6de2b5255fd1a209.json  query-6ab2644c196e0c52bdadb206a6831feeebecb8a2f9924ef3f2deb3b98f9057a1.json  (+16 more)
client/: .eslintrc.json  index.html  (+3 more)
(+93 files in other folders)
