[package]
name = "friday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.7.5", features = ["macros", "tracing"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bcrypt = "0.15.1"
jsonwebtoken = "9.2.0"
time = "0.3"
lettre = "0.11"
rand = "0.8"
